InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityUniqueIdGeneratorSetting__mdt/vlocity_ins__VlocityUniqueIdGeneratorSetting__mdt.object-meta.xml
<CustomObject>
    <label>Vlocity UniqueId Generator Setting</label>
    <pluralLabel>Vlocity UniqueId Generator Settings</pluralLabel>
</CustomObject>