InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityUniqueIdGeneratorSetting__mdt/fields/vlocity_ins__Format__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Format__c</fullName>
    <label>Format</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>