InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityUniqueIdGeneratorSetting__mdt/fields/vlocity_ins__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ObjectType__c</fullName>
    <label>Object Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>UniqueIdGeneratorSettings</relationshipLabel>
    <relationshipName>UniqueIdGeneratorSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>